Another stable version

--- a/src/app/pages/requests/requests.component.scss
+++ b/src/app/pages/requests/requests.component.scss
@@ -1,3 +1,19 @@
 table {
     width: 100%;
 }
+
+.red-color {
+    background-color: #f76e6e;
+    color: white;
+    width: 85px;
+}
+.yellow-color {
+    background-color: #ffbc00;
+    color: white;
+    width: 85px;
+}
+.blue-color {
+    background-color: #87b2ff;
+    color: white;
+    width: 85px;
+}
