--- a/src/app/pages/requests/requests.component.html
+++ b/src/app/pages/requests/requests.component.html
@@ -1,89 +1,115 @@
 <div>
-    <div>
-        <h2>Requests</h2>
-    </div>
-    <div>
-        <mat-select>
-            <mat-option *ngFor="let period of timePeriods">
-              {{period}}
-            </mat-option>
-        </mat-select>
-        <button mat-raised-button (click)="openDialog()">Pick one</button>
-    </div>
+  <div>
+    <h2>Requests</h2>
+  </div>
+  <div>
+    <mat-select>
+      <mat-option *ngFor="let period of timePeriods">
+        {{ period }}
+      </mat-option>
+    </mat-select>
+  </div>
 </div>
 <div>
-    <mat-tab-group>
-        <mat-tab>
-            <ng-template mat-tab-label>
-              <span matBadge="5" matBadgeOverlap="false">Unresolved</span>
-            </ng-template>
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-              
-                <!-- Position Column -->
-                <ng-container matColumnDef="logTime">
-                  <th mat-header-cell *matHeaderCellDef> Log Time </th>
-                  <td mat-cell *matCellDef="let element"> {{element.logTime}} </td>
-                </ng-container>
-              
-                <!-- Name Column -->
-                <ng-container matColumnDef="requestID">
-                  <th mat-header-cell *matHeaderCellDef> Request ID </th>
-                  <td mat-cell *matCellDef="let element"> {{element.requestID}} </td>
-                </ng-container>
-              
-                <!-- Weight Column -->
-                <ng-container matColumnDef="details">
-                  <th mat-header-cell *matHeaderCellDef> Details </th>
-                  <td mat-cell *matCellDef="let element"> {{element.details}} </td>
-                </ng-container>
-              
-                <!-- Symbol Column -->
-                <ng-container matColumnDef="poc">
-                  <th mat-header-cell *matHeaderCellDef> POC </th>
-                  <td mat-cell *matCellDef="let element"> {{element.poc}} </td>
-                </ng-container>
+  <mat-tab-group>
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <span matBadge="5" matBadgeOverlap="false">Unresolved</span>
+      </ng-template>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox
+              (change)="$event ? masterToggle() : null"
+              [checked]="selection.hasValue() && isAllSelected()"
+              [indeterminate]="selection.hasValue() && !isAllSelected()"
+              [aria-label]="checkboxLabel()"
+            >
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <mat-checkbox
+              (click)="$event.stopPropagation()"
+              (change)="$event ? selection.toggle(row) : null"
+              [checked]="selection.isSelected(row)"
+              [aria-label]="checkboxLabel(row)"
+            >
+            </mat-checkbox>
+          </td>
+        </ng-container>
+        <!-- Position Column -->
+        <ng-container matColumnDef="logTime">
+          <th mat-header-cell *matHeaderCellDef>Log Time</th>
+          <td mat-cell *matCellDef="let element">{{ element.logTime }}</td>
+        </ng-container>
 
-                <ng-container matColumnDef="refPoc">
-                    <th mat-header-cell *matHeaderCellDef> Ref. POC </th>
-                    <td mat-cell *matCellDef="let element"> {{element.refPoc}} </td>
-                </ng-container>
-                <ng-container matColumnDef="channel">
-                    <th mat-header-cell *matHeaderCellDef> Channel </th>
-                    <td mat-cell *matCellDef="let element"> {{element.channel}} </td>
-                </ng-container>
-                <ng-container matColumnDef="volunteer">
-                    <th mat-header-cell *matHeaderCellDef> Volunteer </th>
-                    <td mat-cell *matCellDef="let element"> {{element.volunteer}} </td>
-                </ng-container>
-                <ng-container matColumnDef="priority">
-                    <th mat-header-cell *matHeaderCellDef> Priority </th>
-                    <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
-                </ng-container>
-              
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              </table>
-              <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-        </mat-tab>
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <span matBadge="5" matBadgeOverlap="false">Pending</span>
-          </ng-template>
-        </mat-tab>
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <span matBadge="12" matBadgeOverlap="false">In Progress</span>
-          </ng-template>
-        </mat-tab>
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <span matBadge="27" matBadgeOverlap="false">Resolved</span>
-          </ng-template>
-        </mat-tab>
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <span matBadge="9" matBadgeOverlap="false">All Requests</span>
-          </ng-template>
-        </mat-tab>
-    </mat-tab-group>
+        <!-- Name Column -->
+        <ng-container matColumnDef="requestID">
+          <th mat-header-cell *matHeaderCellDef>Request ID</th>
+          <td mat-cell *matCellDef="let element">{{ element.requestID }}</td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="details">
+          <th mat-header-cell *matHeaderCellDef>Details</th>
+          <td mat-cell *matCellDef="let element">{{ element.details }}</td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="poc">
+          <th mat-header-cell *matHeaderCellDef>POC</th>
+          <td mat-cell *matCellDef="let element">{{ element.poc }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="refPoc">
+          <th mat-header-cell *matHeaderCellDef>Ref. POC</th>
+          <td mat-cell *matCellDef="let element">{{ element.refPoc }}</td>
+        </ng-container>
+        <ng-container matColumnDef="channel">
+          <th mat-header-cell *matHeaderCellDef>Channel</th>
+          <td mat-cell *matCellDef="let element">{{ element.channel }}</td>
+        </ng-container>
+        <ng-container matColumnDef="volunteer">
+          <th mat-header-cell *matHeaderCellDef>Volunteer</th>
+          <td mat-cell *matCellDef="let element">{{ element.volunteer }}</td>
+        </ng-container>
+        <ng-container matColumnDef="priority">
+          <th mat-header-cell *matHeaderCellDef>Priority</th>
+          <td mat-cell *matCellDef="let element">
+            <button *ngIf="element.priority === 'HIGH'" mat-raised-button class="red-color">HIGH</button>
+            <button *ngIf="element.priority === 'MEDIUM'" mat-raised-button class="yellow-color">MEDIUM</button>
+            <button *ngIf="element.priority === 'LOW'" mat-raised-button class="blue-color">LOW</button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 20]"
+        showFirstLastButtons
+      ></mat-paginator>
+    </mat-tab>
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <span matBadge="5" matBadgeOverlap="false">Pending</span>
+      </ng-template>
+    </mat-tab>
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <span matBadge="12" matBadgeOverlap="false">In Progress</span>
+      </ng-template>
+    </mat-tab>
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <span matBadge="27" matBadgeOverlap="false">Resolved</span>
+      </ng-template>
+    </mat-tab>
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <span matBadge="9" matBadgeOverlap="false">All Requests</span>
+      </ng-template>
+    </mat-tab>
+  </mat-tab-group>
 </div>
