--- a/src/app/pages/requests/requests.component.html
+++ b/src/app/pages/requests/requests.component.html
@@ -46,7 +46,9 @@
         <!-- Name Column -->
         <ng-container matColumnDef="requestID">
           <th mat-header-cell *matHeaderCellDef>Request ID</th>
-          <td mat-cell *matCellDef="let element">{{ element.requestID }}</td>
+          <td mat-cell *matCellDef="let element">
+            <button (click)="onClickTableCell(element)">{{ element.requestID }}</button>
+          </td>
         </ng-container>
 
         <!-- Weight Column -->
