Few more api integrations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -298,7 +298,7 @@
   <!-- <span>Welcome</span> -->
   <a routerLink="/reports" routerLinkActive="active" mat-button>Dashboard</a>
   <a routerLink="/requests" routerLinkActive="active" mat-button>Requests</a>
-  <a mat-button>Tickets</a>
+  <a routerLink="/tickets" routerLinkActive="active" mat-button>Tickets</a>
   <a mat-button>Contacts</a>
 
   <div class="spacer"></div>
