--- a/src/app/components/take-request-dialog/take-request-dialog.component.html
+++ b/src/app/components/take-request-dialog/take-request-dialog.component.html
@@ -1,41 +1,97 @@
 <h1 mat-dialog-title>Create Request</h1>
 <div mat-dialog-content>
   <!-- <p>What's your favorite animal?</p> -->
-  <mat-form-field>
+  <mat-form-field class="width-100">
     <mat-label>Details</mat-label>
-    <textarea matInput placeholder="Enter details" [(ngModel)]="data.details"></textarea>
+    <textarea matInput placeholder="Enter details" [(ngModel)]="data.request.details"></textarea>
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field class="width-30">
     <mat-label>Point of Contact</mat-label>
-    <input matInput [(ngModel)]="data.poc">
+    <input matInput [(ngModel)]="data.poc.name">
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Organization</mat-label>
+    <input matInput [(ngModel)]="data.poc.organization">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Phone number</mat-label>
+    <span matPrefix>+91 &nbsp;</span>
+    <input matInput type="tel" placeholder="888-888-8888" [(ngModel)]="data.poc.phone">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Email ID</mat-label>
+    <input matInput type="email" [(ngModel)]="data.poc.email">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Location</mat-label>
+    <input matInput [(ngModel)]="data.poc.location">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Party</mat-label>
+    <mat-select [(value)]="data.poc.party">
+      <mat-option *ngFor="let party of partyList" [value]="party.displayName">{{party.displayName}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field class="width-30">
     <mat-label>Reference Point of Contact</mat-label>
-    <input matInput [(ngModel)]="data.refPoc">
+    <input matInput [(ngModel)]="data.refPoc.name">
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Organization</mat-label>
+    <input matInput [(ngModel)]="data.refPoc.organization">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Phone number</mat-label>
+    <span matPrefix>+91 &nbsp;</span>
+    <input matInput type="tel" placeholder="888-888-8888" [(ngModel)]="data.refPoc.phone">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Email ID</mat-label>
+    <input matInput [(ngModel)]="data.refPoc.email">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Location</mat-label>
+    <input matInput [(ngModel)]="data.refPoc.location">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Party</mat-label>
+    <mat-select [(value)]="data.refPoc.party">
+      <mat-option *ngFor="let party of partyList" [value]="party.displayName">{{party.displayName}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field class="width-30">
     <mat-label>Channel</mat-label>
-    <mat-select [(value)]="data.channel">
-        <mat-option value="whatsapp">Whatsapp</mat-option>
-        <mat-option value="phone">Phone</mat-option>
-        <mat-option value="email">Email</mat-option>
-        <mat-option value="other">Other</mat-option>
+    <mat-select [(value)]="data.request.channel">
+        <mat-option *ngFor="let channel of channels" [value]="channel.displayName">{{channel.displayName}}</mat-option>
     </mat-select>
   </mat-form-field>
-  <mat-form-field>
-    <input matInput [(ngModel)]="data.channelValue">
-  </mat-form-field>
-  <mat-form-field>
+  <mat-form-field class="width-30">
     <mat-label>Priority</mat-label>
-    <mat-select [(value)]="data.priority">
-      <mat-option value="LOW">LOW</mat-option>
-      <mat-option value="MEDIUM">MEDIUM</mat-option>
-      <mat-option value="HIGH">HIGH</mat-option>
+    <mat-select [(value)]="data.request.priority">
+      <mat-option *ngFor="let priority of priorities" [value]="priority.value">{{priority.displayName}}</mat-option>
     </mat-select>
   </mat-form-field>
-  <mat-form-field>
+  <br/>
+  <mat-form-field class="width-30">
     <mat-label>Volunteer Assigned</mat-label>
-    <input matInput [(ngModel)]="data.volunteer">
+    <input matInput [(ngModel)]="data.volunteer.name">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Organization</mat-label>
+    <input matInput [(ngModel)]="data.volunteer.organization">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Phone number</mat-label>
+    <span matPrefix>+91 &nbsp;</span>
+    <input matInput type="tel" placeholder="888-888-8888" [(ngModel)]="data.volunteer.phone">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Email ID</mat-label>
+    <input matInput [(ngModel)]="data.volunteer.email">
+  </mat-form-field>
+  <mat-form-field class="width-30">
+    <mat-label>Location</mat-label>
+    <input matInput [(ngModel)]="data.volunteer.location">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
