--- a/src/app/components/take-request-dialog/take-request-dialog.component.scss
+++ b/src/app/components/take-request-dialog/take-request-dialog.component.scss
@@ -1,4 +1,13 @@
-mat-form-field {
-    width: 100%;
-    margin-bottom: 20px;
+.width-30 {
+  width: 30%;
+  margin: 10px;
+}
+
+.width-60 {
+  width: 60%;
+  margin: 10px;
+}
+.width-100 {
+  width: 100%;
+  margin: 10px;
 }
