--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -302,7 +302,7 @@
   <a mat-button>Contacts</a>
 
   <div class="spacer"></div>
-  <button mat-raised-button class="take-request" (click)="createRequest()">
+  <button *ngIf="showTakeRequestButton" mat-raised-button class="take-request" (click)="createRequest()">
     Take Request
   </button>
 </div>
