--- a/src/app/components/take-ticket-dialog/take-ticket-dialog.component.html
+++ b/src/app/components/take-ticket-dialog/take-ticket-dialog.component.html
@@ -1,62 +1,137 @@
 <h1 mat-dialog-title>Create Ticket</h1>
-<div mat-dialog-content>
-  <h2>Request ID: {{data.requestID}}</h2>
+<div mat-dialog-content [formGroup]="ticketForm">
+  <h2>Request ID: {{ data.requestID }}</h2>
   <h3>Registered Tickets</h3>
   <div>
-    <mat-card *ngFor="let ticket of data.tickets">
-      <mat-card-content  matBadgeSize="medium">{{(ticket.natureOfTicket + ' ' + ticket.resource).toUpperCase()}}</mat-card-content>
-      <!-- [matBadge]="ticket.noOfResourcesNeedAvailable" -->
+    <mat-card  *ngFor="let ticket of tickets">
+      <mat-card-content [matBadge]="ticket.noOfResourcesNA" matBadgeSize="medium">{{
+        (ticket.nature + " " + ticket.resource).toUpperCase()
+      }}</mat-card-content>
     </mat-card>
   </div>
   <label id="nature-ticket-label">Nature of Ticket</label>
-  <mat-radio-group class="radio-group" aria-labelledby="nature-ticket-label" [(ngModel)]="data.natureOfTicket">
+  <mat-radio-group
+    class="radio-group"
+    aria-labelledby="nature-ticket-label"
+    formControlName="natureOfTicket"
+  >
     <mat-radio-button class="radio-button" value="give">Give</mat-radio-button>
     <mat-radio-button class="radio-button" value="need">Need</mat-radio-button>
   </mat-radio-group>
   <mat-form-field class="width-30">
     <mat-label>Select Resource</mat-label>
-    <mat-select [(value)]="data.resource">
-      <mat-option *ngFor="let item of resources" [value]="item.displayName">{{item.displayName}}</mat-option>
+    <mat-select formControlName="resource">
+      <mat-option *ngFor="let item of resources" [value]="item.displayName">{{
+        item.displayName
+      }}</mat-option>
     </mat-select>
   </mat-form-field>
   <mat-form-field class="width-30">
     <mat-label>Resource Quantity</mat-label>
-    <input matInput [(ngModel)]="data.noOfResourcesNeedAvailable">
+    <input matInput formControlName="noOfResourcesNeedAvailable" />
   </mat-form-field>
   <mat-form-field class="width-30">
     <mat-label>Duration (In Days)</mat-label>
-    <input matInput type="number" [(ngModel)]="data.duration">
+    <input matInput type="number" formControlName="duration" />
   </mat-form-field>
   <mat-form-field class="width-30">
     <mat-label>Frequency</mat-label>
-    <mat-select [(value)]="data.frequency">
-      <mat-option *ngFor="let item of frequencies" [value]="item.displayName">{{item.displayName}}</mat-option>
+    <mat-select formControlName="frequency">
+      <mat-option *ngFor="let item of frequencies" [value]="item.displayName">{{
+        item.displayName
+      }}</mat-option>
     </mat-select>
   </mat-form-field>
   <mat-form-field class="width-30">
     <mat-label>Location - Distribution Point</mat-label>
-    <input matInput [(ngModel)]="data.location">
+    <input matInput formControlName="location" />
   </mat-form-field>
-  <mat-form-field class="width-30">
-    <mat-label>Point of Contact</mat-label>
-    <input matInput [(ngModel)]="data.poc">
-  </mat-form-field>
-  <mat-form-field class="width-30">
-    <mat-label>Status</mat-label>
-    <mat-select [(value)]="data.status">
-        <mat-option *ngFor="let item of statuses"  [value]="item.displayName">{{item.displayName}}</mat-option>
-    </mat-select>
-  </mat-form-field>
-  <mat-form-field class="width-30">
-    <mat-label>Volunteer Assigned</mat-label>
-    <input matInput [(ngModel)]="data.volunteer">
-  </mat-form-field>
+  <div formGroupName="poc">
+    <mat-form-field class="width-30">
+      <mat-label>Point of Contact</mat-label>
+      <input matInput formControlName="name" />
+    </mat-form-field>
+    <mat-form-field class="width-30">
+      <mat-label>Organization</mat-label>
+      <input matInput formControlName="organization" />
+    </mat-form-field>
+    <mat-form-field class="width-30">
+      <mat-label>Phone number</mat-label>
+      <span matPrefix>+91 &nbsp;</span>
+      <input
+        matInput
+        type="tel"
+        placeholder="888-888-8888"
+        formControlName="phone"
+      />
+    </mat-form-field>
+    <mat-form-field class="width-30">
+      <mat-label>Email ID</mat-label>
+      <input matInput type="email" formControlName="email" />
+    </mat-form-field>
+    <mat-form-field class="width-30">
+      <mat-label>Location</mat-label>
+      <input matInput formControlName="location" />
+    </mat-form-field>
+    <mat-form-field class="width-30">
+      <mat-label>Party</mat-label>
+      <mat-select formControlName="party">
+        <mat-option
+          *ngFor="let party of partyList"
+          [value]="party.displayName"
+          >{{ party.displayName }}</mat-option
+        >
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div formGroupName="volunteer">
+    <mat-form-field class="width-30">
+      <mat-label>Volunteer Assigned</mat-label>
+      <input matInput formControlName="name" />
+    </mat-form-field>
+    <mat-form-field class="width-30">
+      <mat-label>Organization</mat-label>
+      <input matInput formControlName="organization" />
+    </mat-form-field>
+    <mat-form-field class="width-30">
+      <mat-label>Phone number</mat-label>
+      <span matPrefix>+91 &nbsp;</span>
+      <input
+        matInput
+        type="tel"
+        placeholder="888-888-8888"
+        formControlName="phone"
+      />
+    </mat-form-field>
+    <mat-form-field class="width-30">
+      <mat-label>Email ID</mat-label>
+      <input matInput formControlName="email" />
+    </mat-form-field>
+    <mat-form-field class="width-30">
+      <mat-label>Location</mat-label>
+      <input matInput formControlName="location" />
+    </mat-form-field>
+  </div>
   <mat-form-field class="width-60">
     <mat-label>Additional Comments</mat-label>
-    <textarea matInput placeholder="Enter Additional comments" [(ngModel)]="data.comment"></textarea>
+    <textarea
+      matInput
+      placeholder="Enter Additional comments"
+      formControlName="comment"
+    ></textarea>
   </mat-form-field>
+  <button type="button" (click)="getForm()" [disabled]="!ticketForm.valid">
+    Submit
+  </button>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onClickCancel()">Cancel</button>
-  <button mat-raised-button color="primary" [mat-dialog-close]="data" cdkFocusInitial>Create</button>
+  <button
+    mat-raised-button
+    color="primary"
+    [disabled]="!ticketForm.valid"
+    (click)="onClickCreate()"
+  >
+    Create
+  </button>
 </div>
