--- a/src/app/components/take-ticket-dialog/take-ticket-dialog.component.html
+++ b/src/app/components/take-ticket-dialog/take-ticket-dialog.component.html
@@ -3,10 +3,14 @@
   <h2>Request ID: {{ data.requestID }}</h2>
   <h3>Registered Tickets</h3>
   <div>
-    <mat-card  *ngFor="let ticket of tickets">
-      <mat-card-content [matBadge]="ticket.noOfResourcesNA" matBadgeSize="medium">{{
-        (ticket.nature + " " + ticket.resource).toUpperCase()
-      }}</mat-card-content>
+    <mat-card *ngFor="let ticket of tickets">
+      <mat-card-content
+        [matBadge]="ticket.noOfResourcesNA"
+        matBadgeSize="medium"
+        >{{
+          (ticket.nature + " " + ticket.resource).toUpperCase()
+        }}</mat-card-content
+      >
     </mat-card>
   </div>
   <label id="nature-ticket-label">Nature of Ticket</label>
@@ -20,7 +24,7 @@
   </mat-radio-group>
   <mat-form-field class="width-30">
     <mat-label>Select Resource</mat-label>
-    <mat-select formControlName="resource">
+    <mat-select formControlName="resource" required>
       <mat-option *ngFor="let item of resources" [value]="item.displayName">{{
         item.displayName
       }}</mat-option>
@@ -28,15 +32,15 @@
   </mat-form-field>
   <mat-form-field class="width-30">
     <mat-label>Resource Quantity</mat-label>
-    <input matInput formControlName="noOfResourcesNeedAvailable" />
+    <input matInput formControlName="noOfResourcesNeedAvailable" required />
   </mat-form-field>
   <mat-form-field class="width-30">
     <mat-label>Duration (In Days)</mat-label>
-    <input matInput type="number" formControlName="duration" />
+    <input matInput type="number" formControlName="duration" required />
   </mat-form-field>
   <mat-form-field class="width-30">
     <mat-label>Frequency</mat-label>
-    <mat-select formControlName="frequency">
+    <mat-select formControlName="frequency" required>
       <mat-option *ngFor="let item of frequencies" [value]="item.displayName">{{
         item.displayName
       }}</mat-option>
@@ -44,16 +48,16 @@
   </mat-form-field>
   <mat-form-field class="width-30">
     <mat-label>Location - Distribution Point</mat-label>
-    <input matInput formControlName="location" />
+    <input matInput formControlName="location" required />
   </mat-form-field>
   <div formGroupName="poc">
     <mat-form-field class="width-30">
       <mat-label>Point of Contact</mat-label>
-      <input matInput formControlName="name" />
+      <input matInput formControlName="name" required />
     </mat-form-field>
     <mat-form-field class="width-30">
       <mat-label>Organization</mat-label>
-      <input matInput formControlName="organization" />
+      <input matInput formControlName="organization" required />
     </mat-form-field>
     <mat-form-field class="width-30">
       <mat-label>Phone number</mat-label>
@@ -63,6 +67,7 @@
         type="tel"
         placeholder="888-888-8888"
         formControlName="phone"
+        required
       />
     </mat-form-field>
     <mat-form-field class="width-30">
@@ -71,45 +76,17 @@
     </mat-form-field>
     <mat-form-field class="width-30">
       <mat-label>Location</mat-label>
-      <input matInput formControlName="location" />
+      <input matInput formControlName="location" required />
     </mat-form-field>
     <mat-form-field class="width-30">
       <mat-label>Party</mat-label>
-      <mat-select formControlName="party">
+      <mat-select formControlName="party" required>
         <mat-option
           *ngFor="let party of partyList"
           [value]="party.displayName"
           >{{ party.displayName }}</mat-option
         >
       </mat-select>
-    </mat-form-field>
-  </div>
-  <div formGroupName="volunteer">
-    <mat-form-field class="width-30">
-      <mat-label>Volunteer Assigned</mat-label>
-      <input matInput formControlName="name" />
-    </mat-form-field>
-    <mat-form-field class="width-30">
-      <mat-label>Organization</mat-label>
-      <input matInput formControlName="organization" />
-    </mat-form-field>
-    <mat-form-field class="width-30">
-      <mat-label>Phone number</mat-label>
-      <span matPrefix>+91 &nbsp;</span>
-      <input
-        matInput
-        type="tel"
-        placeholder="888-888-8888"
-        formControlName="phone"
-      />
-    </mat-form-field>
-    <mat-form-field class="width-30">
-      <mat-label>Email ID</mat-label>
-      <input matInput formControlName="email" />
-    </mat-form-field>
-    <mat-form-field class="width-30">
-      <mat-label>Location</mat-label>
-      <input matInput formControlName="location" />
     </mat-form-field>
   </div>
   <mat-form-field class="width-60">
@@ -120,9 +97,9 @@
       formControlName="comment"
     ></textarea>
   </mat-form-field>
-  <button type="button" (click)="getForm()" [disabled]="!ticketForm.valid">
+  <!-- <button type="button" (click)="getForm()" [disabled]="!ticketForm.valid">
     Submit
-  </button>
+  </button> -->
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onClickCancel()">Cancel</button>
