updated few color themes

--- a/src/app/components/take-request-dialog/take-request-dialog.component.html
+++ b/src/app/components/take-request-dialog/take-request-dialog.component.html
@@ -199,6 +199,7 @@
   <button
     mat-raised-button
     color="primary"
+    class="green-color"
     [disabled]="!requestForm.valid"
     (click)="onClickCreate()"
     cdkFocusInitial
