--- a/src/app/components/take-ticket-dialog/take-ticket-dialog.component.html
+++ b/src/app/components/take-ticket-dialog/take-ticket-dialog.component.html
@@ -117,6 +117,7 @@
   <button
     mat-raised-button
     color="primary"
+    class="green-color"
     [disabled]="!ticketForm.valid"
     (click)="onClickCreate()"
   >
