--- a/src/app/pages/tickets/tickets.component.html
+++ b/src/app/pages/tickets/tickets.component.html
@@ -1,8 +1,8 @@
 <div>
-  <div>
+  <div class="margin-20">
     <h2>Tickets</h2>
   </div>
-  <div>
+  <div class="margin-20">
     <mat-radio-group
       [(ngModel)]="natureOfTickets"
       (change)="updateTicketType()"
