--- a/src/app/pages/tickets/tickets.component.scss
+++ b/src/app/pages/tickets/tickets.component.scss
@@ -1,7 +1,12 @@
 table {
-    width: 100%;
+  width: 100%;
 }
-
 mat-radio-button {
-    margin: 5px;
+  margin: 5px;
+}
+.margin-20 {
+  margin: 20px;
+}
+.mat-badge-content {
+  background: #68c28f;
 }
