--- a/src/app/pages/requests/requests.component.scss
+++ b/src/app/pages/requests/requests.component.scss
@@ -17,21 +17,21 @@ table {
   color: white;
   width: 85px;
 }
-.green-color {
-  background-color: #68c28f;
-}
-.black-color {
-  color: #193668
-}
+// .green-color {
+//   background-color: #68c28f;
+// }
+// .black-color {
+//   color: #193668
+// }
 .margin-20 {
   margin: 20px;
 }
 .take-request {
   float: right;
 }
-.mat-badge-content {
-  background: #68c28f;
-}
+// .mat-badge-content {
+//   background: #68c28f;
+// }
 // .mat-tab-label-active {
 //   background-color: #68c28f;
 // }
