--- a/src/app/components/take-ticket-dialog/take-ticket-dialog.component.html
+++ b/src/app/components/take-ticket-dialog/take-ticket-dialog.component.html
@@ -113,11 +113,10 @@
   </button> -->
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onClickCancel()">Cancel</button>
+  <button mat-raised-button color="accent" (click)="onClickCancel()">Cancel</button>
   <button
     mat-raised-button
     color="primary"
-    class="green-color"
     [disabled]="!ticketForm.valid"
     (click)="onClickCreate()"
   >
