--- a/src/app/pages/requests/requests.component.html
+++ b/src/app/pages/requests/requests.component.html
@@ -11,7 +11,7 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
-    <button mat-raised-button class="take-request green-color" color="primary" (click)="openDialog()">
+    <button mat-raised-button class="take-request" color="primary" (click)="openDialog()">
       <mat-icon matTooltip="Create Request">info_circle</mat-icon>
       Take Request
     </button>
