--- a/src/app/pages/tickets/tickets.component.scss
+++ b/src/app/pages/tickets/tickets.component.scss
@@ -7,6 +7,6 @@ mat-radio-button {
 .margin-20 {
   margin: 20px;
 }
-.mat-badge-content {
-  background: #68c28f;
-}
+// .mat-badge-content {
+//   background: #68c28f;
+// }
